--- a/HuttonCourt/pages/requirements.txt
+++ b/HuttonCourt/pages/requirements.txt
@@ -1,1 +1,6 @@
 import numpy
+import streamlit as st
+import numpy as np
+import matplotlib.pyplot as plt
+import pandas as pd
+import altair as alt
